<resources>
    <string name="app_name">MyKotlinLesson01</string>

    <string name="log_button">ボタン1</string>
    <string name="log_message">ボタン1が押されました。</string>

    <string name="toast_button">ボタン2</string>
    <string name="toast_message">ボタン2が押されました。</string>

    <string name="alert_dialog_button">ボタン3</string>
    <string name="alert_dialog_title">タイトル</string>
    <string name="alert_dialog_message">ボタン3が押されました。</string>
    <string name="alert_dialog_ok_button">OK</string>

    <string name="transition_button">ボタン4</string>
    <string name="sub_activity_message">ボタン4が押されました。</string>
    <string name="close_button">閉じる</string>

    <string name="edit_text_button">ボタン5</string>
    <string name="edit_text_message">ボタン5が押されました。</string>
</resources>